nginx/alb-service.yaml
apiVersion: v1
kind: Service
metadata:
name: msil-brm-test-nlb
#namespace: mi-api-dev
labels:
  app: web
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
