nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx-ingress
 annotations:
kubernetes.io/ingress.class: alb
alb.ingress.kubernetes.io/scheme: internet-facing
alb.ingress.kubernetes.io/target-type: instance
spec:
 rules:
   - host: localhost
     http:
       paths:
         - path: /nginx
           pathType: Prefix
           backend:
             service:
               name: nginx-service
               port:
                 number: 8080
